--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,10 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="A product of Fenado" />
         <title>Fenado | Fullstack App</title>
+        <script>
+            window.onerror = (msg, src, line, col, err) => { console.warn('Error:', msg); return true; };
+            window.addEventListener('unhandledrejection', e => { console.warn('Promise:', e.reason); e.preventDefault(); });
+        </script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
